--- a/package.json
+++ b/package.json
@@ -1,7 +1,21 @@
 {
   "name": "CyberSherlock",
   "version": "0.0.1",
+  "scripts": {
+    "start": "node ./bin/www"
+  },
   "dependencies": {
-    
+    "body-parser": "^1.18.2",
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
+    "cors": "^2.8.4",
+    "express": "^4.16.2",
+    "fs": "0.0.1-security",
+    "mocha": "^4.1.0",
+    "mongoose": "^4.13.9",
+    "morgan": "^1.9.0",
+    "path": "^0.12.7",
+    "rotating-file-stream": "^1.3.4",
+    "should": "^13.2.1"
   }
 }
