--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "mongoose": "^4.13.10",
     "morgan": "^1.9.0",
     "path": "^0.12.7",
-    "rotating-file-stream": "^1.3.4"
+    "rotating-file-stream": "^1.3.4",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
