--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "test": "NODE_ENV=test mocha --timeout=20000"
   },
   "dependencies": {
+    "bcrypt": "^1.0.3",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
