--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "fs": "0.0.1-security",
     "mongoose": "^4.13.10",
     "morgan": "^1.9.0",
+    "nodemailer": "^4.6.0",
     "path": "^0.12.7",
+    "randomstring": "^1.1.5",
     "rotating-file-stream": "^1.3.4",
     "xmlhttprequest": "^1.8.0"
   },
