--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
   "app": {
     "name": "Cyber Sherlock",
     "host": "http://localhost",
+    "port": 3080,
     "mode": 0,
     "path": "/home/mykola/PhpstormProjects/CyberSherlock",
     "log": {
